# 7-sem

BIS/Exam/: Для студенческого рейтинга 13 группа.xlsx
BIS/Exam/KR/: 4.asm  (+2 more)
BIS/test/: hello.asm  hello.com
BIS/Задания на лекциях/: Лекция 10.  Шпионский клавиатур 4 курс 08.11.2022.docx  Лекция 11 .  Шпион, клавиатурный шпион 15.11.2022.docx  Лекция 12  Защита программ от взлома 22.11.2022 4 курс.docx  Лекция 13.  Ещё раз про .... Лаба №4.docx  Лекция 14  Лапша и защита программ от взлома.docx  Лекция 15 Основной текст.doc  Лекция 16 Глоссарий загадки.docx  Лекция 7  Продолжение Чупа_Чупса.docx  Лекция 8. AntiDHog. Начало..docx  Лекция 9. Quest Kill The Bill.docx
BIS/послендние страдание/: даты высланных писем.docx
Hackell/Practice/UnitTestingCalc/: CHANGELOG.md  UnitTestingCalc.cabal
Hackell/Practice/UnitTestingCalc/app/: Calculator.hs
Hackell/Practice/UnitTestingCalc/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Hackell/Practice/UnitTestingCalc/test/: CalculatorTest.hs
KBRS/: 1 лабораторная работа.docx
KBRS/1/: Stat.xlsx
KBRS/5/: 2023-01-08-ZAP-Report-.html  2023-01-08-ZAP-Report-new.html  Лаб 5.docx
Summer Practice/: Доскоч РД. Летняя практика.docx  Презентация.pptx
Summer Practice/Diary/: Индивидуальное задание.txt  Краткое описание работы.txt  Отзыв о работе студента.txt
КУРСОВОЙ ПРОЕКТ/Документы/: 4к13грДоскоч Роман_Задание на КП.docx  (+1 more)
ОП/: Президент РБ.docx  Этническая политика в Республике Беларусь.docx
ПЧМИ/: romashkins-kebab-a462bf84d9d3.json
(+201 files in other folders)
