cabal-version:      2.4
name:               UnitTestingCalc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             minato225
maintainer:         1815131bill@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md




Test-Suite test-Calculator
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             CalculatorTest.hs
  -- other-modules:       Calculator
  build-depends:       base >=4.14 && <4.15, HUnit